# Ejemplo_python

./: .coveragerc  .cruft.json  .gitignore  Jenkinsfile  Kaafile  README.md  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties
.kaa/: install.py
prueba_lib_pyspark/: __init__.py  app.py
prueba_lib_pyspark/code/: best_film.py  config.py  film_analysis.py  main.py  most_popular.py  pandas_utils.py  read_prepare_save.py
prueba_lib_pyspark/saved_files/: actors_df.csv  best_movies.csv  directors_df.csv
prueba_proyecto/code/: read_preparation.py
tests/: test_app.py
