[metadata]
description=Library Python project
long_description_content_type = 'text/markdown'
long_description = file: README.md

[bumpversion]
current_version = 1.0.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
commit = True
tag = False

[bumpversion:file:prueba_lib_pyspark/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:Kaafile]

[flake8]
exclude = build,.git,.tox,tests,conftest.py,venv,.venv,.venv,docs/conf.py,prueba_lib_pyspark/configenv.py,.kaa
max-line-length = 119

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
testpaths = tests prueba_lib_pyspark
collect_ignore = ['setup.py']

[darglint]
docstring_style=google
